--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academia</title>
+    <title>landing page</title>
+    <script src="https://kit.fontawesome.com/c00266a34b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     
