Estrutura do HTML

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -9,6 +9,31 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="menu-content">
+            <h1 class="logo">alce's barbearia</h1>
+            <nav class="header-menu">
+                <ul>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">serviços</a></li>
+                    <li><a href="#">agendar</a></li>
+                    <li><a href="#">endereço</a></li>
+                    <li><a href="#">baixe o nosso app</a></li>
+                    <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></i></a></li>
+                </ul>
+            </nav>
+         </div>
+    </header>
+    <main>
+        <div class="main-content">
+            <h1 class="primary- text">corte com os melhores</h1>
+            <h2 class="second-text">agende seu horario!</h2>
+            <div class="btns">
+                <button class="btn-agendar">agendar horario</button>
+                <button class="btn-barbeiros">barbeiros</button>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
