--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -28,9 +28,9 @@
     <main>
         <div class="main-content">
             <h1 class="primary- text">corte com os melhores</h1>
-            <h2 class="second-text">agende seu horario!</h2>
+            <h2 class="second-text">agende seu horário!</h2>
             <div class="btns">
-                <button class="btn-agendar">agendar horario</button>
+                <button class="btn-agendar">agendar horário</button>
                 <button class="btn-barbeiros">barbeiros</button>
             </div>
         </div>
