--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="menu-content">
-            <h1 class="logo">alce's barbearia</h1>
+            <h1 class="logo">Alce's Barbearia</h1>
             <nav class="header-menu">
                 <ul>
                     <li><a href="#">home</a></li>
@@ -19,8 +19,8 @@
                     <li><a href="#">agendar</a></li>
                     <li><a href="#">endereço</a></li>
                     <li><a href="#">baixe o nosso app</a></li>
-                    <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></i></a></li>
+                    <li><a href="https://www.facebook.com/AlcesBarbeariaOficial/"><i class="fab fa-facebook-square"></i></a></li>
+                    <li><a href="https://www.instagram.com/alcesbarbearia/"><i class="fab fa-instagram"></i></a></li>
                 </ul>
             </nav>
          </div>
